# img-timestamp

./: .gitignore  AGENTS.md  README.md  check.sh  pyproject.toml
.github/workflows/: ci.yml
src/imgts/: __main__.py  cli.py  constants.py  errors.py  models.py  utils.py
src/imgts/services/: fallback.py  metadata_writer.py  plan_io.py  renamer.py  scanner.py  stats.py
src/imgts/services/extractors/: __init__.py  exif_extractor.py  filename_extractor.py  filesystem_extractor.py  video_extractor.py
src/imgts/services/info/: __init__.py
tests/: conftest.py  helpers.py  test_cli.py  test_edge_cases.py  test_filename_extractor.py  test_integration.py
