[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imgts"
dynamic = ["version"]
description = "CLI tool for managing image timestamps"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.4",
    "rich>=14.0.0",
    "pillow>=10.0.0",
    "pillow-heif>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "mypy-extensions>=1.0.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "types-pillow>=10.0.0",
]
video = ["pymediainfo>=6.0.0"]

[project.urls]
Homepage = "https://github.com/funbiscuit/img-timestamp"
Repository = "https://github.com/funbiscuit/img-timestamp"

[project.scripts]
imgts = "imgts.__main__:main"

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = ["src"]
explicit_package_bases = true

[tool.setuptools]
package-data = { imgts = [] }

[tool.setuptools.packages.find]
where = ["src"]
include = ["imgts*"]

[tool.setuptools_scm]
write_to = "src/imgts/_version.py"
fallback_version = "0.1.0"

[tool.ruff]
target-version = "py310"
src = ["src"]
line-length = 120
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "target",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

per-file-ignores."src/imgts/cli.py" = ["B008"]  # typer.Option in function defaults is standard pattern

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["imgts"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
line-ending = "lf"
